--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -137,7 +137,7 @@
     <Compile Include="Download\HttpFtpProtocolExtension.cs" />
     <Compile Include="Download\HttpProtocolProvider.cs" />
     <Compile Include="Download\IHttpFtpProtocolParameters.cs" />
-    <Compile Include="Download\ITask.cs" />
+    <Compile Include="Base\ITask.cs" />
     <Compile Include="Download\ProxyParameters.cs" />
     <Compile Include="Download\GameDownloader.cs" />
     <Compile Include="Download\ThumbnailDownloader.cs" />
@@ -154,16 +154,17 @@
     <Compile Include="Menus\GardenGamesPanel.cs" />
     <Compile Include="Menus\MovingEffectSpritelet.cs" />
     <Compile Include="Menus\ProgressBar.cs" />
-    <Compile Include="Store\GameCollection.cs" />
-    <Compile Include="Store\GameFilter.cs" />
-    <Compile Include="Store\GameLibrary.cs" />
+    <Compile Include="Base\GameCollection.cs" />
+    <Compile Include="Base\GameFilter.cs" />
+    <Compile Include="Base\GameLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GardenGame.cs" />
-    <Compile Include="Store\IndieGame.cs" />
-    <Compile Include="Store\JSONStore.cs" />
-    <Compile Include="Store\GardenConfig.cs" />
+    <Compile Include="Base\IndieGame.cs" />
+    <Compile Include="Base\JSONStore.cs" />
+    <Compile Include="Base\GardenConfig.cs" />
     <Compile Include="Menus\ThumbnailFromFile.cs" />
+    <Compile Include="Base\Task.cs" />
     <Compile Include="Unpack\UnpackerTask.cs" />
     <Compile Include="Unpack\Unrar.cs" />
     <Compile Include="Unpack\Unrarrer.cs" />
@@ -219,9 +220,6 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="IndiegameGarden_TemporaryKey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
