--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IndiegameGarden</RootNamespace>
-    <AssemblyName>GameChanger</AssemblyName>
+    <AssemblyName>IndiegameGarden</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
@@ -129,6 +129,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\ThreadedTask.cs" />
     <Compile Include="Download\BaseDownloader.cs" />
     <Compile Include="Download\BaseProtocolProvider.cs" />
     <Compile Include="Download\ConfigDownloader.cs" />
@@ -167,8 +168,8 @@
     <Compile Include="Base\Task.cs" />
     <Compile Include="Unpack\UnpackerTask.cs" />
     <Compile Include="Unpack\Unrar.cs" />
-    <Compile Include="Unpack\Unrarrer.cs" />
-    <Compile Include="Unpack\Unzipper.cs" />
+    <Compile Include="Unpack\UnrarTask.cs" />
+    <Compile Include="Unpack\UnzipTask.cs" />
     <Compile Include="Util\RandomMath.cs" />
   </ItemGroup>
   <ItemGroup>
