Added State to GameChooserMenu; select0 added; remove unused code

--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -132,6 +132,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\State.cs" />
     <Compile Include="Base\ThreadedTask.cs" />
     <Compile Include="Download\BaseDownloader.cs" />
     <Compile Include="Download\BaseProtocolProvider.cs" />
