see tasklist, json config loading, launcher finds latest igg version, thumbnail download limit to only local thumbnails

--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Menus\GameChooserMenu.cs" />
     <Compile Include="Menus\GameThumbnailCursor.cs" />
     <Compile Include="Menus\GardenGamesPanel.cs" />
+    <Compile Include="Menus\LoadingText.cs" />
     <Compile Include="Menus\MovingEffectSpritelet.cs" />
     <Compile Include="Menus\ProgressBar.cs" />
     <Compile Include="Base\GameCollection.cs" />
