--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -132,6 +132,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\SiteLauncherTask.cs" />
     <Compile Include="Menus\GardenMusic.cs" />
     <Compile Include="Menus\LoadingDisplay.cs" />
     <Compile Include="Base\State.cs" />
