--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\SiteLauncherTask.cs" />
+    <Compile Include="Menus\FloatingTextMessage.cs" />
     <Compile Include="Menus\GardenMusic.cs" />
     <Compile Include="Menus\LoadingDisplay.cs" />
     <Compile Include="Base\State.cs" />
