bugfix in launcher, now finds arbitrary highest version; change name of data dir to more specific name

--- a/IndiegameGardenLauncher/IndiegameGardenLauncher/IndiegameGardenLauncher.csproj
+++ b/IndiegameGardenLauncher/IndiegameGardenLauncher/IndiegameGardenLauncher.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsgBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="IGGLauncherApp.cs" />
