--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"ServerMsg":"Enjoy your garden!  Twitter: @IndiegameGarden","test":"","GameLibVer":"2","maxTh":400,"Magic":"f20fj239jf0a9w","dtChk":60,"ClientVer":"1","tmLstUpd":6.34714203009844E+17}
+{"ServerMsg":"Enjoy your garden!  Twitter: @IndiegameGarden","test":"","GameLibVer":"2","Magic":"f20fj239jf0a9w","maxTh":400,"dtChk":60,"ClientVer":"1","tmLstUpd":6.34714807552228E+17}
