fixed thumbnail showing for GT games; misc small fixes

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"ServerMsg":"Enjoy your garden!  Twitter: @IndiegameGarden","test":"","GameLibVer":"3","Magic":"f20fj239jf0a9w","maxTh":400,"dtChk":600,"ClientVer":"1","tmLstUpd":6.34718482743337E+17}
+{"ServerMsg":"Enjoy your garden!  Twitter: @IndiegameGarden","test":"","GameLibVer":"3","maxTh":400,"Magic":"f20fj239jf0a9w","dtChk":60000,"ClientVer":"1","tmLstUpd":6.34719753459688E+17}
