--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,1 @@
-{"ServerMsg":"Enjoy your garden!  Twitter: @IndiegameGarden","test":"","GameLibVer":"3","maxTh":400,"Magic":"f20fj239jf0a9w","dtChk":60000,"ClientVer":"1","tmLstUpd":6.34719753459688E+17}
+{"ServerMsg":"Test config file GameLibVer: 3","test":"","GameLibVer":"3","maxTh":400,"Magic":"f20fj239jf0a9w","dtChk":60000000,"ClientVer":"1","tmLstUpd":6.34719753459688E+17}
