--- a/config/gamelib_fmt3/gamelib-config.json
+++ b/config/gamelib_fmt3/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Test config file GameLibVer: v3.1",
+"ServerMsg":"Test config file GameLibVer: fmt3 v1",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
 "dtChk":600000000,
