--- a/distribution/IndiegameGarden_data/config/gamelib-config.json
+++ b/distribution/IndiegameGarden_data/config/gamelib-config.json
@@ -1,1 +1,8 @@
-{"ServerMsg":"Test config file GameLibVer: fmt3 v1","GameLibVer":1,"Magic":"f20fj239jf0a9w","dtChk":600000000,"ClientVer":"2","tmLstUpd":6.34737546504219E+17}
+{
+"ServerMsg":"Enjoy your garden! This needs an internet connection to work.",
+"GameLibVer":1,
+"Magic":"f20fj239jf0a9w",
+"dtChk":180,
+"ClientVer":3,
+"tmLstUpd":0
+}
