impl starting of new igg client from igg icon

--- a/distribution/IndiegameGarden_data/config/gamelib-config.json
+++ b/distribution/IndiegameGarden_data/config/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Enjoy your garden! This needs an internet connection to work.",
+"ServerMsg":"Enjoy your garden!\nThis needs an internet connection to work.",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
 "dtChk":180,
