Fixes in IsGrowable to get library unpacking back to work; various cosmetic changes; added gamelib to content proj (as backup lib); code to enable loading of backup lib (from file) and backup config (from memory); gamelib updates

--- a/config/gamelib_fmt3/gamelib-config.json
+++ b/config/gamelib_fmt3/gamelib-config.json
@@ -1,8 +1,8 @@
 {
-"ServerMsg":"Enjoy your garden! But watch out for the weeds.",
+"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
-"dtChk":180,
+"dtChk":240,
 "ClientVer":3,
 "tmLstUpd":0
 }
