--- a/distribution/IndiegameGarden_data/config/gamelib-config.json
+++ b/distribution/IndiegameGarden_data/config/gamelib-config.json
@@ -1,8 +1,1 @@
-{
-"ServerMsg":"Enjoy your garden!\nThis needs an internet connection to work.",
-"GameLibVer":1,
-"Magic":"f20fj239jf0a9w",
-"dtChk":180,
-"ClientVer":3,
-"tmLstUpd":0
-}
+{"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.","GameLibVer":1,"Magic":"f20fj239jf0a9w","dtChk":180,"ClientVer":3,"tmLstUpd":0}
