--- a/config/gamelib_fmt3/gamelib-config.json
+++ b/config/gamelib_fmt3/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Enjoy your garden! But watch out for the weeds.",
+"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
 "dtChk":180,
