added build/release scripts for client and gamelib separately; added Servers.txt guiding description to servers; tasks upd; update Gamelib to V2 officially with build scripts used.

--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -190,6 +190,7 @@
     <Content Include="GameThumbnail.png" />
     <Content Include="TasksList.txt" />
     <Content Include="Tests.txt" />
+    <Content Include="Servers.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\TTengine\TTengine\TTengine.csproj">
