--- a/distribution/IndiegameGarden_data/config/gamelib-config.json
+++ b/distribution/IndiegameGarden_data/config/gamelib-config.json
@@ -1,6 +1,6 @@
 {
-"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.",
-"GameLibVer":1,
+"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.\nindiegamegarden.com   @IndiegameGarden",
+"GameLibVer":2,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
 "ClientVer":3,
