--- a/config/gamelib_fmt3/gamelib-config.json
+++ b/config/gamelib_fmt3/gamelib-config.json
@@ -1,8 +1,8 @@
 {
-"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.\nindiegamegarden.com   @IndiegameGarden",
+"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.",
 "GameLibVer":2,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
-"ClientVer":3,
+"ClientVer":5,
 "tmLstUpd":0
 }
