--- a/config/gamelib_fmt3/gamelib-config.json
+++ b/config/gamelib_fmt3/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds.",
+"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds. In the next weeks we'll try to fix the crashes that some of\nyou may have experienced.",
 "GameLibVer":2,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
