--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -29,7 +29,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>http://www.indiegamegarden.com/install/</InstallUrl>
+    <InstallUrl>http://www.indiegamegarden.com/beta-6/</InstallUrl>
     <ProductName>Indiegame Garden</ProductName>
     <PublisherName>IndiegameGarden.com</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
