--- a/config/gamelib_fmt3/gamelib-config.json
+++ b/config/gamelib_fmt3/gamelib-config.json
@@ -1,8 +1,8 @@
 {
-"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds. In the next weeks we'll try to fix the crashes that some of\nyou may have experienced.",
+"ServerMsg":"Enjoy your garden!\nBut watch out for the weeds. The new Beta-6 version is out now.",
 "GameLibVer":2,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
-"ClientVer":5,
+"ClientVer":6,
 "tmLstUpd":0
 }
