removed security signing; fix to comply with latest TTengine

--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -75,13 +75,13 @@
     </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>IndiegameGarden.pfx</AssemblyOriginatorKeyFile>
