mess around VS project settings to get it building

--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -84,7 +84,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>IndiegameGarden.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -273,7 +274,6 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="IndiegameGarden.pfx" />
     <None Include="Properties\app.manifest">
       <SubType>Designer</SubType>
     </None>
