--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -16,8 +16,10 @@
     <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>ff4c9c40-154d-43ca-8ecd-22f2e82e88b2</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
-    <ApplicationIcon>Game.ico</ApplicationIcon>
-    <Thumbnail>GameThumbnail.png</Thumbnail>
+    <ApplicationIcon>
+    </ApplicationIcon>
+    <Thumbnail>
+    </Thumbnail>
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -158,28 +160,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base\SiteLauncherTask.cs" />
-    <Compile Include="Launcher.cs" />
     <Compile Include="Menus\FloatingTextMessage.cs" />
     <Compile Include="Menus\GardenMusic.cs" />
     <Compile Include="Menus\LoadingDisplay.cs" />
-    <Compile Include="Base\State.cs" />
-    <Compile Include="Base\ThreadedTask.cs" />
-    <Compile Include="Download\BaseDownloader.cs" />
-    <Compile Include="Download\BaseProtocolProvider.cs" />
-    <Compile Include="Download\FtpProtocolProvider.cs" />
-    <Compile Include="Download\HttpFtpProtocolExtension.cs" />
-    <Compile Include="Download\HttpProtocolProvider.cs" />
-    <Compile Include="Download\IHttpFtpProtocolParameters.cs" />
-    <Compile Include="Base\ITask.cs" />
-    <Compile Include="Download\ProxyParameters.cs" />
-    <Compile Include="Download\GameDownloader.cs" />
-    <Compile Include="Install\GameDownloadAndInstallTask.cs" />
-    <Compile Include="Install\InstallTask.cs" />
     <Compile Include="Menus\ColorChangeBehavior.cs" />
     <Compile Include="Menus\DodgeSidewaysBehavior.cs" />
     <Compile Include="Menus\GameInfoBox.cs" />
-    <Compile Include="Base\GameLauncherTask.cs" />
     <Compile Include="Menus\GamesPanel.cs" />
     <Compile Include="Menus\GameTextBox.cs" />
     <Compile Include="Menus\GameThumbnail.cs" />
@@ -187,49 +173,15 @@
     <Compile Include="Menus\GameThumbnailCursor.cs" />
     <Compile Include="Menus\GardenGamesPanel.cs" />
     <Compile Include="Menus\ProgressBar.cs" />
-    <Compile Include="Base\GameCollection.cs" />
-    <Compile Include="Base\GameFilter.cs" />
-    <Compile Include="Base\GameLibrary.cs" />
     <Compile Include="Menus\TemporaryScaleBlowup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="GardenGame.cs" />
-    <Compile Include="Base\GardenItem.cs" />
-    <Compile Include="Base\JSONStore.cs" />
-    <Compile Include="Base\GardenConfig.cs" />
     <Compile Include="Menus\ThumbnailFromFile.cs" />
-    <Compile Include="Base\Task.cs" />
-    <Compile Include="Unpack\CopyFileTask.cs" />
-    <Compile Include="Unpack\UnpackerTask.cs" />
-    <Compile Include="Unpack\Unrar.cs" />
-    <Compile Include="Unpack\UnrarTask.cs" />
-    <Compile Include="Unpack\UnzipTask.cs" />
-    <Compile Include="Util\HttpPost.cs" />
-    <Compile Include="Util\RandomMath.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="fmodex.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Game.ico" />
-    <Content Include="GameThumbnail.png" />
-    <Content Include="unrar.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\TTengine\TTengine\TTengine.csproj">
       <Project>{616035D5-3927-44CD-BD41-2EEE846AC3A3}</Project>
       <Name>TTengine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\TTMusicEngine\TTMusicEngine\TTMusicEngine.csproj">
-      <Project>{CB99D0C9-FD0E-4B90-91BD-7D5816B38A2C}</Project>
-      <Name>TTMusicEngine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\IndiegameGardenContent\IndiegameGardenContent.contentproj">
-      <Name>IndiegameGardenContent %28Content%29</Name>
-      <XnaReferenceType>Content</XnaReferenceType>
-      <Project>{1C5413AC-4401-442C-8576-87E9B7B4E0B0}</Project>
     </ProjectReference>
     <ProjectReference Include="..\MyDownloader\MyDownloader.Core\MyDownloader.Core.csproj">
       <Project>{E763345E-6696-4C53-8764-47E4ABD67DEF}</Project>
