disabled self-update code; floating logo look change; added thumbnail copying code to get a starting set of game icons even without network conn.

--- a/config/gamelib_fmt4/gamelib-config.json
+++ b/config/gamelib_fmt4/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Portable garden message here.",
+"ServerMsg":"Enjoy Indiegame Garden 7!\nDownloaded games are stored in the IndiegameGarden folder in Windows Application data.",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
