bugfixes in config file loading and Magic value checking for V7; comments updated; simplified SiteLauncherTask class; bugfix in website loading for items that don't have website; generalized SiteLauncher to non-http schemes; removed unused code; finalized loading of IGG datapath folder when pressing W key on the igg_controls item

--- a/config/gamelib_fmt4/gamelib-config.json
+++ b/config/gamelib_fmt4/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Enjoy Indiegame Garden 7!\nDownloaded games are stored in the IndiegameGarden folder in Windows Application data.",
+"ServerMsg":"Enjoy Indiegame Garden 7!\nDownloaded games are stored in the IndiegameGarden folder. Any other Indiegame Garden (IGG) browsers\nuse this same folder, so you can use any other IGG browser too. You can press W now to see\nthe location of this folder in Windows Explorer.",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
