--- a/config/gamelib_fmt4/gamelib-config.json
+++ b/config/gamelib_fmt4/gamelib-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Enjoy Indiegame Garden 7!\nDownloaded games are stored in the IndiegameGarden folder. Play them via this browser. Or, you can press W now to see\nthe location of the IndiegameGarden folder in Windows Explorer.",
+"ServerMsg":"Enjoy Indiegame Garden 7!\nDownloaded games are stored in the IndiegameGarden folder. Play them from here! Or, you can press W now to see\nthe location of the IndiegameGarden folder in Windows Explorer. Updates to the garden with new games happens automatically.",
 "GameLibVer":1,
 "Magic":"f20fj239jf0a9w",
 "dtChk":240,
