--- a/config/gamelib_fmt4/gwg-config.json
+++ b/config/gamelib_fmt4/gwg-config.json
@@ -1,7 +1,7 @@
 {
-"ServerMsg":"Enjoy Glorious Wrecks Garden!\nUpdates to the garden with new games happen automatically. Downloaded wrecks are stored in a folder. Press W now to see\nthe location of this folder in Explorer.",
+"ServerMsg":"Enjoy Glorious Wrecks Garden!\nUpdates to the garden with new games may come automatically. Downloaded wrecks are stored in a folder. Press W now to see\nthe location of this folder in Explorer.",
 "GameLibVer":1,"Magic":"gwgfj239jf0a9w",
 "dtChk":240,
 "ClientVer":7,
-"tmLstUpd":99.34964299190625E+17
+"tmLstUpd":0
 }
