--- a/config/gamelib_fmt4/gwg-config.json
+++ b/config/gamelib_fmt4/gwg-config.json
@@ -1,5 +1,5 @@
 {
-"ServerMsg":"Enjoy Glorious Wrecks Garden!\nUpdates to the garden with new games may come automatically. Downloaded wrecks are stored in a folder. Press W now to see\nthe location of this folder in Explorer.",
+"ServerMsg":"Enjoy Glorious Wrecks Garden!\nUpdates to the garden with new games happen automatically when the author updates the game library on the server.\nDownloaded wrecks are stored in a folder. Press W now to see that folder in Windows Explorer.",
 "GameLibVer":1,"Magic":"gwgfj239jf0a9w",
 "dtChk":240,
 "ClientVer":7,
