--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -160,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\SiteLauncherTask.cs" />
+    <Compile Include="BentoGame.cs" />
     <Compile Include="Launcher.cs" />
     <Compile Include="Menus\FloatingTextMessage.cs" />
     <Compile Include="Menus\GardenMusic.cs" />
@@ -197,7 +198,6 @@
     <Compile Include="Menus\TemporaryScaleBlowup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="GardenGame.cs" />
     <Compile Include="Base\GardenItem.cs" />
     <Compile Include="Base\JSONStore.cs" />
     <Compile Include="Base\GardenConfig.cs" />
