stopped scrolling; added missing files to git

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@ obj
 *.pdb
 *.user
 Thumbs.db
+gamelib.bin
 # mstest test results
 TestResults
 igg_gamelib_fmt3
 thumbs-test
 installers
 games
+zips
 igg
 MyDownloader
