--- a/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
+++ b/IndiegameGarden/IndiegameGarden/IndiegameGarden.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Base\GameFilter.cs" />
     <Compile Include="Base\GameLibrary.cs" />
     <Compile Include="Menus\TemporaryScaleBlowup.cs" />
+    <Compile Include="Menus\TimedInvisibility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Base\GardenItem.cs" />
