Added MyDownloader code that is needed

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,6 @@ Thumbs.db
 gamelib.bin
 # mstest test results
 TestResults
-igg_gamelib_fmt3
-thumbs-test
 installers
-games
+Bento
 zips
-igg
-MyDownloader
