tweak in GamelibCompiler settings

--- a/IndiegameGarden/GameLibCompiler/GameLibCompiler.csproj
+++ b/IndiegameGarden/GameLibCompiler/GameLibCompiler.csproj
@@ -51,6 +51,9 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisFailOnMissingRules>true</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>GameLibCompiler.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="protobuf-net">
       <HintPath>.\protobuf-net.dll</HintPath>
